# nano

./: .codecov.yml  .gitignore  .gitmodules  .travis.yml  .vimrc  CMakeLists.txt  LICENSE  README.md  analyze.sh  blacklist_msan.txt  bugs  build.sh  build_debug.sh  build_debug_asan.sh  build_debug_lsan.sh  build_debug_tsan.sh  build_release.sh  build_release_debug.sh  cachegrind.sh  callgrind.sh  codecov.yml  cppcheck.sh  experiments.sh  gdb_tsan.sh  make_synth_images.sh  memcheck.sh  minibatch.sh  minibatch_toremove_when_done.sh  optimizers.txt  perf.sh  setup_semaphore_ci.sh  stochastic.sh  test_convnet.sh  test_network_forward.sh  test_network_optimize.sh  test_network_tester.sh  test_optimizers.txt  todo  train_cbcl-faces.sh  train_cifar10.sh  (+3 more)
apps/: CMakeLists.txt  bench_conv3d.cpp  bench_eigen.cpp  bench_functions.cpp  bench_solvers.cpp  bench_tpool.cpp  benchmark_affine.cpp  benchmark_batch.cpp  benchmark_batch_optimizers.cpp  benchmark_conv.cpp  benchmark_conv3d.cpp  benchmark_eigen.cpp  benchmark_enhancer.cpp  benchmark_funcs.cpp  benchmark_functions.cpp  benchmark_img2col.cpp  benchmark_iterator.cpp  benchmark_model.cpp  benchmark_models.cpp  benchmark_opencl.cpp  benchmark_optimizers.h  benchmark_sampling.cpp  benchmark_solvers.h  benchmark_stoch.cpp  benchmark_stoch_optimizers.cpp  benchmark_tpool.cpp  benchmark_trainers.cpp  benchmark_training.cpp  builder.cpp  convnets.cpp  embed.cpp  evaluate.cpp  generate.cpp  generate_convnets.cpp  image2cpp.cpp  info.cpp  info_archive.cpp  info_enhancer.cpp  info_iterator.cpp  info_mat5.cpp  (+37 more)
apps/ui/: CMakeLists.txt  configwin.cpp  configwin.h  info_task.cpp
libmin/: CMakeLists.txt  batch_cgd.hpp  batch_cgd_steps.hpp  batch_gd.hpp  batch_lbfgs.hpp  batch_params.hpp  ls_backtracking.hpp  ls_cubic.hpp  ls_interpolation.hpp  ls_step.hpp  ls_strategy.hpp  params.hpp  problem.hpp  stoch_adadelta.hpp  stoch_adagrad.hpp  stoch_ag.hpp  stoch_ag_restarts.hpp  stoch_decay.hpp  stoch_params.hpp  stoch_sga.hpp  types.h
libnanocv/: CMakeLists.txt  accumulator.cpp  accumulator.h  arch.h  class.h  clonable.hpp  color.cpp  color.h  criterion.h  evaluate.cpp  evaluate.h  generate.cpp  generate.h  geom.h  image.cpp  image.h  image_grid.h  image_io.cpp  image_io.h  layer.h  log_search.hpp  loss.cpp  loss.h  minimize.cpp  minimize.h  model.cpp  model.h  nanocv.cpp  nanocv.h  optimize.cpp  optimize.h  optimizer.h  placeholders.h  point.h  protocol.h  random.hpp  random_noise.hpp  rect.cpp  rect.h  regularizer.h  (+30 more)
libnanocv/criteria/: avg_criterion.cpp  avg_criterion.h  avg_l2_criterion.cpp  avg_var_criterion.h
libnanocv/cuda/: conv2d.cu  stream.h
libnanocv/file/: archive.cpp  archive.h  base.cpp  base.h  buffer.h  bzip.cpp  mat5.cpp  mat5.h  stream.h
libnanocv/functions/: function.h  function_3hump_camel.cpp  function_3hump_camel.h  function_beale.cpp  function_beale.h  function_booth.cpp  function_booth.h  function_dixon_price.cpp  function_dixon_price.h  function_ellipse.cpp  function_ellipse.h  function_ellipsoid.cpp  function_ellipsoid.h  function_goldstein_price.cpp  function_goldstein_price.h  function_himmelblau.cpp  function_himmelblau.h  function_matyas.cpp  function_matyas.h  function_mccormick.cpp  function_mccormick.h  function_powell.cpp  function_powell.h  function_rosenbrock.cpp  function_rosenbrock.h  function_rotated_ellipsoid.cpp  function_rotated_ellipsoid.h  function_sphere.cpp  function_sphere.h  function_sum_squares.cpp  function_sum_squares.h  function_trid.cpp  function_trid.h
libnanocv/layers/: convolution.hpp  layer_activation.h  layer_activation_snorm.h  layer_activation_splus.h  layer_activation_tanh.h  layer_convolution.cpp  layer_convolution.h  layer_linear.cpp  layer_linear.h  layer_pool.cpp  layer_pool.h  linear.hpp  pooling.hpp
libnanocv/losses/: loss_cauchy.cpp  loss_cauchy.h  loss_classnll.cpp  loss_classnll.h  loss_logistic.cpp  (+3 more)
liboptim/: CMakeLists.txt  batch_gd.hpp  batch_params.hpp  ls_cubic.hpp  quadratic.hpp  stoch_ag.hpp  stoch_sia.hpp  types.h
libtensor/: CMakeLists.txt  conv2d_doti.hpp  conv3d.hpp  conv3d_lin.hpp  corr2d_cpp.hpp  corr2d_egr.hpp  corr2d_mdo.hpp  tensor_map.hpp
nanocv/: CMakeLists.txt  accumulator.cpp  accumulator.h  arch.h  bilinear.hpp  class.cpp  class.h  clonable.hpp  color.cpp  conv2d_detail.hpp  criterion.cpp  criterion.h  evaluate.h  gauss.hpp  generate.cpp  generate.h  image.cpp  image.h  layer.cpp  layer.h  log_search.hpp  logger.h  loss.h  manager.hpp  measure.hpp  minimize.cpp  minimize.h  model.cpp  model.h  nanocv.cpp  optimizer.h  protocol.h  random_noise.hpp  random_translate.hpp  range.hpp  rect.h  sample.h  sampler.cpp  sampling.hpp  scalar.h  (+13 more)
src/: CMakeLists.txt  accumulator.cpp  accumulator.h  arch.cpp  arch.h  batch_optimizer.cpp  batch_optimizer.h  builder.cpp  builder.h  checkpoint.h  class.cpp  class.h  clonable.h  clonable.hpp  cnode.cpp  cnode.h  color.cpp  config.h  configurable.h  convolution.hpp  cortex.h  criterion.cpp  criterion.h  digraph.h  enhancer.cpp  enhancer.h  factory.h  function.cpp  function.h  function_state.cpp  function_state.h  graph.h  image.cpp  iterator.cpp  iterator.h  layer.cpp  layer.h  layer_info.h  learner.cpp  learner.h  (+66 more)
test/: CMakeLists.txt  ncv_test_add.cpp  ncv_test_archive.cpp  ncv_test_color.cpp  ncv_test_conv2d.cpp  ncv_test_conv3d.cpp  ncv_test_convnet_benchmark.cpp  ncv_test_convolution.cpp  ncv_test_corr2d.cpp  ncv_test_decode.cpp  ncv_test_gradient.cpp  ncv_test_image.cpp  ncv_test_loss.cpp  ncv_test_mem.cpp  ncv_test_model_io.cpp  ncv_test_network_backward.cpp  ncv_test_network_forward.cpp  ncv_test_network_gradient.cpp  ncv_test_network_timing.cpp  ncv_test_opencl.cpp  ncv_test_opencl_add.cpp  ncv_test_opencl_mem.cpp  ncv_test_optimize.cpp  ncv_test_optimize_benchmark.cpp  ncv_test_sampler.cpp  ncv_test_stats.cpp  ncv_test_tensor.cpp  ncv_test_thread_loop.cpp  ncv_test_thread_pool.cpp  ncv_test_timing.cpp  ncv_test_unroll.cpp  ncv_test_utar.cpp  test_accumulator.cpp  test_affine.cpp  test_average.cpp  test_batch.cpp  test_batch_optimizers.cpp  test_buffer.cpp  test_builder.cpp  test_charset.cpp  (+83 more)
(+3031 files in other folders)
